@@ -1,8 +1,11 @@
 Enchanted Keyfinder (EK) Changelog
 Build 0.1.0.xxx Beta x -- January 20th, 2011
 ----------------------------------
+
 x.	Fixed a minor UI bug when pressing cancel after clicking Load Hive
 	menu.  "Loading Hive..." did not go away.
+x.	Added support for retrieving Microsoft Office 2010 installation
+	key.
 
 Build 0.1.0.209 Beta 3 -- January 20th, 2011
 ----------------------------------
